--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.14.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
